# quorlin-lang

./: .gitignore  ARCHITECTURE_DETAILED.md  CLAUDE_PROMPTS_FOR_EVM_INTEGRATION.md  COMPILER_PRODUCTION_SUMMARY.md  COMPLETE_STATUS.md  COMPLETION_REPORT.md  Cargo.toml  DEPLOYMENT_RECORD.md  GETTING_STARTED.md  HOW_TO_USE.md  LICENSE-MIT  MILESTONES_SUMMARY.md  QUICK_START_GUIDE.md  QUORLIN_EVM_INTEGRATION_SPEC.md  README.md  README_INTEGRATION_PACKAGE.md  SECURITY_AUDIT_PREP.md  SEMANTIC_ANALYSIS_QUICK_REFERENCE.md  test_all.sh  test_contract.ql  test_minimal.ql  test_minimal.yul  test_simple.ql
Documentations/: ALL_EXAMPLES_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  COMPILATION_RESULTS.md  COMPILER_CAPABILITIES.md  COMPLETE_STATUS.md  COMPLETION_REPORT.md  DEPLOY-SOLANA-COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_RECORD.md  FINAL_COMPILATION_REPORT.md  FINAL_REPORT.md  GETTING_STARTED.md  HOW_TO_USE.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_REFERENCE.md  MILESTONES_SUMMARY.md  NEW_CONTRACTS_COMPILED.md  PARSER_STATUS.md  PHASE9_PROGRESS.md  QUICK_START_GUIDE.md  SELF_HOSTING_PHASE1_PROGRESS.md  SELF_HOSTING_QUICK_REFERENCE.md  SELF_HOSTING_ROADMAP.md  SOLANA-DEPLOY-CHECKLIST.md  STDLIB_REFERENCE.md  TASKS_1-4_COMPLETE.md  TUTORIALS.md  ULTIMATE_ACHIEVEMENT.md  VERIFICATION_REPORT.md  VM_BOOTSTRAP_COMPLETE.md  WEEK2_COMPLETE.md  WEEK3_COMPLETE.md
anchor-test/: .gitignore  Anchor.toml  package.json
anchor-test/programs/quorlin-token/: Cargo.toml
anchor-test/programs/quorlin-token/src/: lib.rs
anchor-test/scripts/: compile-and-deploy.sh  deploy.sh
compiler/: main.ql  tests.ql
compiler/backends/: evm.ql  ink.ql  move.ql  quorlin.ql  solana.ql
compiler/frontend/: ast.ql  lexer.ql  parser.ql
compiler/middle/: advanced_optimizer.ql  ir_builder.ql  optimizer.ql  semantic.ql
compiler/runtime/: stdlib.ql  vm.ql
crates/qlc/: Cargo.toml
crates/qlc/src/: main.rs
crates/qlc/src/commands/: check.rs  compile.rs  fmt.rs  init.rs  mod.rs  parse.rs  tokenize.rs
crates/quorlin-analyzer/: Cargo.toml
crates/quorlin-analyzer/src/: gas.rs  lib.rs  lints.rs  security.rs  typeck.rs
crates/quorlin-codegen-aptos/: Cargo.toml
crates/quorlin-codegen-aptos/src/: lib.rs  move_gen.rs  types.rs
crates/quorlin-codegen-evm/: Cargo.toml
crates/quorlin-codegen-evm/src/: abi.rs  lib.rs  storage_layout.rs  yul_generator.rs
crates/quorlin-codegen-ink/: Cargo.toml
crates/quorlin-codegen-ink/src/: lib.rs
crates/quorlin-codegen-quorlin/: Cargo.toml
crates/quorlin-codegen-quorlin/src/: lib.rs
crates/quorlin-codegen-solana/: Cargo.toml
crates/quorlin-codegen-solana/src/: lib.rs
crates/quorlin-common/: Cargo.toml
crates/quorlin-common/src/: diagnostics.rs  lib.rs  span.rs
crates/quorlin-ir/: Cargo.toml
crates/quorlin-ir/src/: lib.rs
crates/quorlin-lexer/: Cargo.toml
crates/quorlin-lexer/src/: indent.rs  lexer.rs  lib.rs  token.rs
crates/quorlin-parser/: Cargo.toml  build.rs
crates/quorlin-parser/src/: ast.rs  grammar.lalrpop  grammar_minimal.lalrpop  grammar_simple.lalrpop  lib.rs  parser.rs
crates/quorlin-resolver/: Cargo.toml
crates/quorlin-resolver/src/: lib.rs
crates/quorlin-semantics/: Cargo.toml
crates/quorlin-semantics/src/: backend_consistency.rs  lib.rs  lib_improved.rs  security_analyzer.rs  symbol_table.rs  type_checker.rs  validator.rs
docs/: Deployment-EVM.md  Deployment-Polkadot.md  Deployment-Solana.md  IR_SPECIFICATION.md  LANGUAGE_SUBSET.md  PRODUCTION_READINESS_REPORT.md  RUNTIME_ARCHITECTURE.md  TEST_NETWORK_DEPLOYMENT.md
examples/: 00_counter_simple.ql  01_hello_world.ql  01_hello_world_simple.ql  02_variables.ql  03_arithmetic.ql  04_functions.ql  05_control_flow.ql  06_data_structures.ql  README.md  dex.ql  hello_rust.rs  nft_marketplace.ql  simple_counter.ql  test_counter.ql  token.ql  token.yul  voting.ql
examples/advanced/: governance.ql  nft.ql
examples/contracts/: amm.ql  counter.ql  governance.ql  marketplace.ql  multisig.ql  nft.ql  staking.ql  token_simple.ql  voting_simple.ql
hardhat-test/: .gitignore  DEPLOY-INSTRUCTIONS.md  README.md  hardhat.config.js  package.json
hardhat-test/scripts/: compile-and-deploy.js  deploy-token.js  interact-token.js
ink-test/: .gitignore  Cargo.toml
ink-test/contracts/quorlin-token/: Cargo.toml
ink-test/contracts/quorlin-token/src/: lib.rs
ink-test/scripts/: compile-and-deploy.sh
output/: 00_counter_simple.yul  01_hello_world.yul  01_hello_world_simple.yul  02_variables.yul  03_arithmetic.yul  04_functions.yul  05_control_flow.yul  06_data_structures.yul  counter_test.yul  token.yul  token_beautiful.yul
output/aptos/: counter.move  token_simple.move  voting_simple.move
output/evm/: counter.yul  token_simple.yul  voting_simple.yul
output/polkadot/: counter.rs  token_simple.rs  voting_simple.rs
output/quorlin/: counter.qbc  token_simple.qbc  voting_simple.qbc
output/solana/: counter.rs  token_simple.rs  voting_simple.rs
scripts/: bootstrap.ps1  compile-all-contracts.ps1  compile-all-examples.ps1  compile-all-final.ps1  compile-all-fixed.ps1  compile_real_contracts.ps1  generate-real-compilations.ps1  validate_yul.sh
solana-test/: token.rs
stdlib/: README.md  errors.ql
stdlib/access/: access_control.ql  ownable.ql
stdlib/math/: safe_math.ql
stdlib/std/: crypto.ql  log.ql  time.ql
stdlib/std/token/: standard_token.ql
stdlib/token/: erc20.ql
tests/: Cargo.toml  integration_test.rs
