[workspace]
resolver = "2"
members = [
    "crates/qlc",
    "crates/quorlin-lexer",
    "crates/quorlin-parser",
    "crates/quorlin-semantics",
    "crates/quorlin-ir",
    "crates/quorlin-codegen-evm",
    "crates/quorlin-codegen-solana",
    "crates/quorlin-codegen-ink",
    "crates/quorlin-common",
]

[workspace.dependencies]
# Parser
lalrpop = "0.20"
lalrpop-util = "0.20"
logos = "0.14"

# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"

# Error handling
thiserror = "1"
miette = { version = "7", features = ["fancy"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Testing
insta = "1"
proptest = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
