[package]
name = "qlc"
version = "0.1.0"
edition = "2021"
authors = ["Quorlin Contributors"]
description = "The Quorlin smart contract language compiler"
license = "MIT OR Apache-2.0"

[[bin]]
name = "qlc"
path = "src/main.rs"

[dependencies]
quorlin-lexer = { path = "../quorlin-lexer" }
quorlin-parser = { path = "../quorlin-parser" }
quorlin-semantics = { path = "../quorlin-semantics" }
quorlin-codegen-evm = { path = "../quorlin-codegen-evm" }
quorlin-codegen-solana = { path = "../quorlin-codegen-solana" }
quorlin-codegen-ink = { path = "../quorlin-codegen-ink" }
quorlin-common = { path = "../quorlin-common" }
clap = { workspace = true }
colored = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
