[package]
name = "quorlin-token"
version = "0.1.0"
description = "Quorlin Token Contract compiled to Solana/Anchor"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "quorlin_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"

[workspace]
